<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Swift Settings</string>

    <string name="general_settings_title">General Settings</string>

    <string name="charge_led_mode_title">Charge LED mode</string>
    <string name="charge_led_mode_summary">Adjust the behavior of the notification LED during wake up</string>
    <string name="charge_led_mode_on">On</string>
    <string name="charge_led_mode_off">Off</string>
    
    <string name="audio_settings_title">Audio Settings</string>
    <string name="audio_effects">Audio Effects and DSP</string>


  <string name="spare_parts">SpareParts</string>
  <string name="oser_settings_title">Spare Parts</string>
  <string name="development_title">Development</string>
  <string name="development">Dev Tools</string>
  <string name="terminal">Terminal</string>
</resources>
