<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:key="general"
                        android:title="@string/general_settings_title">

        <!-- Charge LED mode -->
        <ListPreference android:key="charge_led_mode"
                        android:persistent="false"
                        android:title="@string/charge_led_mode_title"
                        android:summary="@string/charge_led_mode_summary"
                        android:entries="@array/charge_led_mode_entries"
                        android:entryValues="@array/charge_led_mode_values" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/audio_settings_title">

        <PreferenceScreen android:key="audio_effects"
                          android:title="@string/audio_effects">
                          <intent
                             android:action="android.intent.action.MAIN"
                             android:targetPackage="com.bel.android.dspmanager"
                             android:targetClass="com.bel.android.dspmanager.activity.DSPManager" />
        </PreferenceScreen>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/oser_settings_title">

        <PreferenceScreen android:key="spare_parts"
                          android:title="@string/spare_parts">
                          <intent
                             android:action="android.intent.action.MAIN"
                             android:targetPackage="com.android.spare_parts"
                             android:targetClass="com.android.spare_parts.SpareParts" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/development_title">

        <PreferenceScreen android:key="development"
                          android:title="@string/development">
                          <intent
                             android:action="android.intent.action.MAIN"
                             android:targetPackage="com.android.development"
                             android:targetClass="com.android.development.Development" />
        </PreferenceScreen>

        <PreferenceScreen android:key="andoroid_terminal"
                          android:title="@string/terminal">
                          <intent
                             android:action="android.intent.action.MAIN"
                             android:targetPackage="jackpal.androidterm2"
                             android:targetClass="jackpal.androidterm2.Term" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
